# upr_gmsh

./: .gitignore  CITATION.cff  README.md  ico.stl  pyproject.toml  skew_planes.npy  test_comments.txt
src/pebi_gmsh/: c_segments.py  circle_intersections.py  circumcircle.py  clip_pebi.py  convert_GMSH.py  f_segments.py  generate_constrained_mesh.py  ico_test.py  intersections_2d.py  perfomance_test.py  site_data.py  site_lengths.py  site_locations.py  test.py
src/pebi_gmsh/API/: UPR_GMSH.py
src/pebi_gmsh/Examples/: cut_box_test.py
src/pebi_gmsh/constraints_2D/: c_segments.py  f_segments.py  site_data.py  site_locations.py
src/pebi_gmsh/constraints_3D/: constrained_edges.py  fill_voronoi_mesh.py  triangulated_surface.py
src/pebi_gmsh/data/: constraint_array.npy
src/pebi_gmsh/plots_and_testing/: CEC_figures.py  GMSH_master_plot.py  clip_test.py  cut_box_test.py  distance_field_test.py  fan_method_plot.py  gmsh_plots.ipynb  perfomance_test.py  planar_intersections.py  plot_standard_fem.py  project_plots.ipynb  project_plots.py  skew_planes.npy  test.py  voronoi_metrics.py
src/pebi_gmsh/plotting_utils/: plot_voronoi_3d.py
src/pebi_gmsh/utils_2D/: circle_intersections.py  clip_pebi.py  polyline_interpolation.py
src/pebi_gmsh/utils_3D/: densityfield.py  inscribed_circle_field.py  line_sphere_intersection.py  mean_unit_vector.py  plane_densityfield.py  plane_isd_field.py  point_densityfield.py  sphere_intersection.py  surface_intersection_3d.py  tri_mesh.py
src/pebi_gmsh/utils_3D/__pycache__/: densityfield.line_distance-23.py310.1.nbc  (+101 more)
