[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pebi_gmsh"
version = "0.0.1"
authors = [
  { name="Sondre Husæy", email="sondre@primecut.no" },
]
description = "Gmsh mesh generator for MRST URP"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

